--- a/schedule.html
+++ b/schedule.html
@@ -18,7 +18,8 @@ Topic schedule and lecture notes
        border-style:solid;
        border-width:0px;
        overflow:hidden;
-       word-break:normal;}
+       word-break:normal;
+       }
 
 .tg th{font-family:Arial, sans-serif;
        font-size:16px;
@@ -27,7 +28,8 @@ Topic schedule and lecture notes
        border-style:solid;
        border-width:0px;
        overflow:hidden;
-       word-break:normal;}
+       word-break:normal;
+       }
 
 .tg .tg-c7d0{background-color:#bbdaff}
 .tg .head{background-color:#bbdaff}
@@ -49,8 +51,10 @@ Topic schedule and lecture notes
 
   <tr>
     <td class="tg-week">1</td>
-    <td class="tg-cxkv">Overview [<a href="lectures/01-Overview.pdf">slides</a>] [<a href="lectures/01-Overview-2x2.pdf">4up</a>]<br>
-                        [<a href="lectures/RStudio.pdf">Working with R Studio</a>] [<a href="lectures/RStudio-2x2.pdf">4up</a>]
+    <td class="tg-cxkv">Overview [<a href="lectures/01-Overview.pdf">slides</a>] 
+                        [<a href="lectures/01-Overview-2x2.pdf">4up</a>]<br>
+                        [<a href="lectures/RStudio.pdf">Working with R Studio</a>] 
+                        [<a href="lectures/RStudio-2x2.pdf">4up</a>]
     </td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter01.pdf">Ch1</a>,
@@ -60,9 +64,12 @@ Topic schedule and lecture notes
 		<a href="tutorials/R-intro.R">R-into.R</a> [<a href="tutorials/R-intro.pdf"><img src="icons/knitR.png" alt="knitR" height="16" border="0"></a>]
 	</td>
   </tr>
+
   <tr>
     <td class="tg-week">2</td>
-    <td class="tg-031e">Discrete distributions [<a href="lectures/02-Discrete.pdf">slides</a>] [<a href="lectures/02-Discrete-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Discrete distributions 
+                       [<a href="lectures/02-Discrete.pdf">slides</a>] 
+                       [<a href="lectures/02-Discrete-2x2.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter03.pdf">Ch3</a> </td>
 		<td class="tg-R">
@@ -72,9 +79,12 @@ Topic schedule and lecture notes
 	    [<a href="tutorials/binomial.html"><img src="icons/knitR.png" alt="knitR" height="16" border="0"></a>]
 	</td>
   </tr>
+
   <tr>
     <td class="tg-week">3</td>
-    <td class="tg-031e">Two-Way Tables: Independence and Association [<a href="lectures/03-Twoway1.pdf">slides</a>] [<a href="lectures/03-Twoway1-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Two-Way Tables: Independence and Association 
+                        [<a href="lectures/03-Twoway1.pdf">slides</a>] 
+                        [<a href="lectures/03-Twoway1-2x2.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter04.pdf">Ch4</a>; 
     Agresti: Ch2</td>
@@ -85,6 +95,7 @@ Topic schedule and lecture notes
 				[<a href='R/output/vision-sieve.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">4</td>
     <td class="tg-031e">Two-Way Tables: Ordinal Data and Dependent Samples<br/>
@@ -101,9 +112,12 @@ Topic schedule and lecture notes
 				[<a href='R/output/haireye-spineplot.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">5</td>
-    <td class="tg-031e">Loglinear Models and Mosaic Displays [<a href="lectures/04-Loglin.pdf">slides</a>] [<a href="lectures/04-Loglin-2x2.pdf">4up</a>]<br/>                         
+    <td class="tg-031e">Loglinear Models and Mosaic Displays 
+                      [<a href="lectures/04-Loglin.pdf">slides</a>] 
+                      [<a href="lectures/04-Loglin-2x2.pdf">4up</a>]<br/>                         
                       [<a href="tutorials/loglin.pdf">Tutorial</a>] on loglin models;
                       [<a href="lectures/mosanimate.pdf">Mosaic display animation</a>]
     
@@ -118,9 +132,14 @@ Topic schedule and lecture notes
 				[<a href='R/output/titanic-loglin.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">6</td>
-    <td class="tg-031e">Correspondence Analysis [<a href="lectures/05-Corresp.pdf">slides</a>] [<a href="lectures/05-Corresp-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Correspondence Analysis 
+                        [<a href="lectures/05-Corresp.pdf">slides</a>] 
+                        [<a href="lectures/05-Corresp-2x2.pdf">4up</a>] <br/>
+                        [<a href="tutorials/corresp.pdf">Tutorial</a>] on CA;
+    </td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter06.pdf">Ch6</a></td>
 		<td class="tg-R">
@@ -130,11 +149,13 @@ Topic schedule and lecture notes
 				[<a href='R/output/mca-presex3.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">7</td>
-    <td class="tg-031e">Logistic Regression I [<a href="lectures/06-Logistic.pdf">slides</a>] [<a href="lectures/06-Logistic-2x2.pdf">4up</a>]
-    <br/>
-                      [<a href="tutorials/logistic.pdf">Logistic regression tutorial</a>]
+    <td class="tg-031e">Logistic Regression I 
+                       [<a href="lectures/06-Logistic.pdf">slides</a>] 
+                       [<a href="lectures/06-Logistic-2x2.pdf">4up</a>]<br/>
+                       [<a href="tutorials/logistic.pdf">Logistic regression tutorial</a>]
     </td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter07.pdf">7.1-7.3</a>; 
@@ -150,9 +171,12 @@ Topic schedule and lecture notes
 				[<a href='R/output/Arrests-logistic.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> 
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">8</td>
-    <td class="tg-031e">Logistic Regression II [<a href="lectures/07-Logistic2.pdf">slides</a>] [<a href="lectures/07-Logistic-4up.pdf">4up</a>]</td>
+    <td class="tg-031e">Logistic Regression II 
+                       [<a href="lectures/07-Logistic2.pdf">slides</a>] 
+                       [<a href="lectures/07-Logistic-4up.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter07.pdf">7.3-7.4</a>; 
     Agresti: Ch 4-5</td>
@@ -166,9 +190,12 @@ Topic schedule and lecture notes
 				
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">9</td>
-    <td class="tg-031e">Multinomial Logistic Regression [<a href="lectures/07-Logistic2.pdf">slides</a>] [<a href="lectures/07-Logistic-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Multinomial Logistic Regression 
+                        [<a href="lectures/07-Logistic2.pdf">slides</a>] 
+                        [<a href="lectures/07-Logistic-2x2.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter07.pdf">7.5-7.6</a>; 
     Agresti: Ch 6</td>
@@ -181,6 +208,7 @@ Topic schedule and lecture notes
 				[<a href='R/output/wlf-glogit.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a> 
 		</td>
   </tr>
+
   <tr>
     <td class="tg-week">10</td>
     <td class="tg-031e">Log-Linear Models I [<a href="lectures/08-Loglin2.pdf">slides</a>] [<a href="lectures/08-Loglin2-2x2.pdf">4up</a>]</td>
@@ -197,9 +225,10 @@ Topic schedule and lecture notes
   </tr>
   <tr>
     <td class="tg-week">12</td>
-    <td class="tg-031e">Generalized Linear Models: Count Data[<a href="lectures/09-CountData.pdf">slides</a>] [<a href="lectures/09-CountData-2x2.pdf">4up</a>]
-    <br/>
-                          [<a href="tutorials/count-data.pdf">Count data GLMs tutorial</a>]
+    <td class="tg-031e">Generalized Linear Models: Count Data
+                       [<a href="lectures/09-CountData.pdf">slides</a>] 
+                       [<a href="lectures/09-CountData-2x2.pdf">4up</a>] <br/>
+                       [<a href="tutorials/count-data.pdf">Count data GLMs tutorial</a>]
 
     </td>
     <td class="tg-031e">DDAR: 
