edit schedule; add mosanimate.pdf

--- a/schedule.html
+++ b/schedule.html
@@ -9,6 +9,17 @@ Topic schedule and lecture notes
 
 <h2>Topic schedule and lecture notes</h2>
 
+This table gives the schedule of lecture topics with links to lecture slides, readings, tutorials,
+and associated R scripts illustrating these methods. 
+
+<ul>
+  <li>For convience, I provide lecture slides in both single page and 4-up formats.</li>
+  <li>Readings from my book, <cite>Discrete Data Analysis with R</cite> (DDAR) give pre-publication copies
+  of chapters. I do not allow them to be distributed further.</li>
+  <li>The R scripts have been compiled with knitr, so you can see the results.
+  <img src="icons/knitR.png" alt="knitR" height="16" hspace="4" align="right" border="0"></li>
+</ul>
+
 <style type="text/css">
 .tg  {border-collapse:collapse;border-spacing:0;}
 .tg td{font-family:Arial, 
@@ -82,7 +93,7 @@ Topic schedule and lecture notes
 
   <tr>
     <td class="tg-week">3</td>
-    <td class="tg-031e">Two-Way Tables: Independence and Association 
+    <td class="tg-031e">Two-Way Tables: Independence &amp; Association 
                         [<a href="lectures/03-Twoway1.pdf">slides</a>] 
                         [<a href="lectures/03-Twoway1-2x2.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
