redo R/ files, suppressing warnings

--- a/schedule.html
+++ b/schedule.html
@@ -222,18 +222,30 @@ and associated R scripts illustrating these methods.
 
   <tr>
     <td class="tg-week">10</td>
-    <td class="tg-031e">Log-Linear Models I [<a href="lectures/08-Loglin2.pdf">slides</a>] [<a href="lectures/08-Loglin2-2x2.pdf">4up</a>]</td>
+    <td class="tg-031e">Log-Linear Models I 
+                       [<a href="lectures/08-Loglin2.pdf">slides</a>] 
+                       [<a href="lectures/08-Loglin2-2x2.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter08.pdf">8.1-8.4</a>; 
     Agresti: Ch 7</td>
+		<td class="tg-R">
+				<a href='R/berkeley-logit.R'> berkely-logit.R</a>	
+				[<a href='R/output/berkeley-logit.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
+		</td>
   </tr>
+
   <tr>
     <td class="tg-week">11</td>
     <td class="tg-031e">Log-Linear Models II [<a href="lectures/08-Loglin2.pdf">slides</a>] [<a href="lectures/08-Loglin2-2x2.pdf">4up</a>]</td>
     <td class="tg-031e">DDAR: 
     <a href="VCDR/chapter08.pdf">8.5-8.11</a>; 
     Agresti: Ch 8</td>
+		<td class="tg-R">
+				<a href='R/mental-glm.R'> mental-glm.R</a>	
+				[<a href='R/output/mental-glm.html'><img src='icons/knitR.png' alt='knitR' height=16 border=0>] </a>
+		</td>
   </tr>
+
   <tr>
     <td class="tg-week">12</td>
     <td class="tg-031e">Generalized Linear Models: Count Data
